# crazys-wm-mod

./: CHANGES.md  CMakeLists.txt  README.md  TODO.md  config.xml
Docs&Tools/: jobs.html  (+2 more)
src/game/: CMakeLists.txt  Constants.cpp  Constants.h  Game.cpp  IGame.cpp  IGame.h  InterfaceGlobals.cpp  InterfaceProcesses.cpp  Inventory.cpp  Inventory.h  SavesList.cpp  SavesList.h  XmlMisc.cpp  cEvents.cpp  cEvents.h  cGame.cpp  cGameSettings.cpp  cGameSettings.h  cGangManager.cpp  cGangs.cpp  cGangs.h  cGirlGangFight.cpp  cGirlTorture.cpp  cGirls.cpp  cGirls.h  cGold.cpp  cGold.h  cInventory.cpp  cInventory.h  cJobManager.cpp  cNameList.cpp  cObjectiveManager.cpp  cRandomGirl.cpp  cRival.cpp  cRival.h  cTariff.cpp  cTariff.h  events.h  fuzzmain.cpp  gang_missions.cpp  (+1 more)
src/game/buildings/: CMakeLists.txt  IBuilding.cpp  IBuilding.h  cDungeon.cpp  cDungeon.h
src/game/buildings/arena/: ArenaJobs.cpp
src/game/buildings/brothel/: BarJobs.cpp  BrothelJobs.cpp  BrothelJobs.h  Escort.cpp  StripClub.cpp  Whore.cpp  WorkCustService.cpp  WorkExploreCatacombs.cpp  WorkTorturer.cpp  cBrothel.cpp
src/game/buildings/centre/: CentreJobs.cpp  Therapy.cpp
src/game/buildings/clinic/: ClinicJobs.cpp  Surgery.cpp  cClinic.cpp
src/game/buildings/farm/: FarmJobs.cpp  WorkFarmPonyGirl.cpp  cFarm.h
src/game/buildings/house/: House.cpp  Training.cpp  WorkPersonalBedWarmer.cpp  cHouse.h
src/game/buildings/include/buildings/: IBuilding.h  IBuildingShift.h  cBrothel.h  cBuilding.h  cBuildingManager.h  cDungeon.h  cHouse.h  queries.h  sGirlShiftData.h
src/game/buildings/src/: IBuilding.cpp  cBuilding.cpp  cBuildingManager.cpp  cBuildingShift.cpp  cBuildingShift.h  cDungeon.cpp  queries.cpp
src/game/buildings/src/arena/: ArenaJobs.cpp  Fighters.cpp  Other.cpp  Producers.cpp  cArena.cpp  cArena.h
src/game/buildings/src/brothel/: BarJobs.cpp  BrothelJobs.cpp  BrothelJobs.h  Escort.cpp  Whore.cpp  WorkTorturer.cpp  cBrothel.cpp
src/game/buildings/src/centre/: CentreJobs.cpp  Therapy.cpp  cCentre.cpp  cCentre.h
src/game/buildings/src/clinic/: ClinicJobs.cpp  ClinicJobs.h  Surgery.cpp  cClinic.cpp  cClinic.h
src/game/buildings/src/farm/: FarmJobs.cpp  FarmJobs.h  WorkFarmPonyGirl.cpp  cFarm.cpp  cFarm.h
src/game/buildings/src/house/: House.cpp  Training.cpp  WorkPersonalBedWarmer.cpp  cHouse.cpp
src/game/buildings/src/studio/: StudioCrew.cpp  StudioFilming.cpp  StudioJobs.h  StudioOther.cpp  StudioScenes.cpp  cMovieStudio.cpp  cMovieStudio.h  data.cpp  filming.cpp  manager.cpp
src/game/buildings/studio/: StudioCrew.cpp  StudioFilming.cpp  StudioJobs.h  StudioOther.cpp  StudioScenes.cpp  cMovieStudio.cpp
src/game/character/: CMakeLists.txt  ICharacter.cpp  ICharacter.h  cCustomers.cpp  cGirlPool.h  cPlayer.cpp  lust.h  predicates.cpp  pregnancy.cpp  sGirl.cpp  sGirl.h
src/game/character/include/: traits.h
src/game/character/include/character/: ICharacter.h  cCustomers.h  lust.h  sCustomer.h  sGirl.h
src/game/character/include/traits/: ITraitSpec.h  ITraitsCollection.h  ITraitsManager.h  fwd.h  hDynamicTraitHandle.h  ids.h
src/game/character/src/: ICharacter.cpp  cCustomers.cpp  cPlayer.cpp  cSkillCap.cpp  lust.cpp  pregnancy.cpp  sGirl.cpp
src/game/character/src/traits/: cTraitSpec.cpp  cTraitSpec.h  cTraitsCollection.cpp  cTraitsCollection.h  cTraitsManager.cpp  cTraitsManager.h
src/game/character/traits/: ITraitsCollection.h  cTraitSpec.cpp  cTraitsCollection.cpp  cTraitsCollection.h
src/game/combat/: action.cpp  combat.cpp  combatant.cpp  combatant.h  traits.h
src/game/images/: cImageList.cpp  cImageList.h  cImageLookup.cpp  cImageLookup.h  ids.cpp  ids.h  sImageList.cpp  sImageList.h  sImageSpec.cpp  sImageSpec.h
src/game/jobs/: BasicJob.cpp  CMakeLists.txt  Cleaning.cpp  Crafting.cpp  GenericJob.cpp  IGenericJob.cpp  IGenericJob.h  JobData.cpp  Matron.cpp  WorkFightArenaGirls.cpp  WorkFightBeast.cpp  WorkFreetime.cpp  WorkPersonalBedWarmer.cpp
src/game/jobs/include/: jobs.h
src/game/jobs/include/deprecated/: BasicJob.h  Crafting.h  IGenericJob.h  JobData.h  SimpleJob.h  TextInterface.h  Treatment.h  Wrapper.h
src/game/jobs/include/jobs/: BasicJob.h  Crafting.h  IBuildingShift.h  IGenericJob.h  IJobManager.h  JobData.h  SimpleJob.h  Treatment.h  cBasicJob.h  cCrafting.h  cGenericJob.h  cGirlShift.h  cJobManager.h  cMatronJob.h  cSimpleJob.h  sAttributeCondition.h  sGirlShiftData.h
src/game/jobs/src/: BasicJob.cpp  Cleaning.cpp  Crafting.cpp  IGenericJob.cpp  IJobManager.cpp  JobData.cpp  Matron.cpp  SimpleJob.cpp  SpecialJobs.cpp  TextInterface.cpp  TextInterface.h  Treatment.cpp  WorkFreetime.cpp  cBasicJob.cpp  cBuildingShift.cpp  cBuildingShift.h  cCrafting.cpp  cGenericJob.cpp  cJobManager.cpp  cMatronJob.cpp  cSimpleJob.cpp  sAttributeCondition.cpp
src/game/jobs/src-deprecated/: BasicJob.cpp  IGenericJob.cpp  JobData.cpp  SimpleJob.cpp  TextInterface.cpp  Wrapper.cpp
src/game/screens/: BuildingScreenManagement.cpp  BuildingScreenManagement.h  ScreenBase.cpp  ScreenBase.h  cGameWindow.cpp  cGameWindow.h  cScreenBank.cpp  cScreenBank.h  cScreenBrothelManagement.cpp  cScreenBrothelManagement.h  cScreenBuildingSetup.cpp  cScreenBuildingSetup.h  cScreenDungeon.cpp  cScreenDungeon.h  cScreenGallery.cpp  cScreenGallery.h  cScreenGameConfig.cpp  cScreenGameConfig.h  cScreenGameMenu.cpp  cScreenGameMenu.h  cScreenGangs.cpp  cScreenGangs.h  cScreenGirlDetails.cpp  cScreenGirlDetails.h  cScreenInfoJobs.cpp  cScreenInfoJobs.h  cScreenInfoTraits.cpp  cScreenInfoTraits.h  cScreenItemManagement.cpp  cScreenItemManagement.h  cScreenMarketResearch.cpp  cScreenMarketResearch.h  cScreenMayor.cpp  cScreenMayor.h  cScreenMovieMaker.cpp  cScreenMovieMaker.h  cScreenNewGame.cpp  cScreenNewGame.h  cScreenPlayerOffice.cpp  cScreenPlayerOffice.h  (+15 more)
src/game/scripting/: CMakeLists.txt  cLuaScript.cpp  sLuaGirl.cpp
src/game/scripting/include/: scripting.h
src/game/scripting/src/: cEventMapping.cpp  cLuaScript.cpp  cLuaScript.h  cLuaState.cpp  cLuaState.h  cScriptManager.cpp  cScriptManager.h  sLuaGirl.cpp  sLuaGirl.h  sLuaJobProcessing.cpp  sLuaJobProcessing.h  sLuaParameter.cpp
(+422 files in other folders)
